Fix Join btn and empty state on mobile

--- a/client/src/styles/SplitView.less
+++ b/client/src/styles/SplitView.less
@@ -93,5 +93,7 @@ section .SessionJoinButton {
 
     section .SessionJoinButton {
         margin: 15px auto 0;
+        width: 90%;
+        max-width: 400px;
     }
 }
