--- a/client/src/styles/session/SessionQuestionsContainer.less
+++ b/client/src/styles/session/SessionQuestionsContainer.less
@@ -37,3 +37,16 @@
         color: #474747;
     }
 }
+
+
+@media only screen and (max-width: 800px) {
+    .SessionQuestionsContainer {
+        .noQuestionsHeading {
+            margin-top: 40px;
+        }
+
+        .noQuestionsWarning, .noQuestionsHeading {
+            font-size: 15px;
+        }
+    }
+}
